# UTEC-Prog2-2023-02-Poligonos-02-Polimorfismo

./: CCuadrado.cpp  CCuadrado.h  CHexagono.cpp  CHexagono.h  CMakeLists.txt  CPoligono.cpp  CPoligono.h  CTriangulo.cpp  CTriangulo.h  Definiciones.h  main.cpp
